trying to stop scroll behind overlay nav menu

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -132,7 +132,7 @@ img {
   padding: 1rem; }
 
 .menu-bottom {
-  margin-top: 3rem; }
+  margin-top: 1rem; }
 
 .menu-list {
   text-align: center; }
@@ -140,11 +140,11 @@ img {
 .menu-list li {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 3rem; }
+  margin-bottom: 2rem; }
 
 .logo-container {
   margin-bottom: 1.5rem;
-  width: 100px; }
+  width: 75px; }
 
 .menu-top__button {
   color: #ededed;
