--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -91,7 +91,7 @@
 	padding: 1rem;
 }
 .menu-bottom {
-	margin-top: 3rem;
+	margin-top: 1rem;
 }
 .menu-list {
 	text-align: center;
@@ -99,11 +99,11 @@
 .menu-list li {
 	font-size: 3rem;
 	font-weight: 700;
-	margin-bottom: 3rem;
+	margin-bottom: 2rem;
 }
 .logo-container {
 	margin-bottom: 1.5rem;
-	width: 100px;
+	width: 75px;
 }
 .menu-top__button {
 	color: $secondary-text-color;
